--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "react-native-view-shot": "^4.0.2",
     "react-scripts": "5.0.1",
     "tailwindcss": "^3.4.15",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "@babel/plugin-proposal-private-property-in-object": "^7.18.6"
   },
   "scripts": {
     "start": "react-scripts start",
