--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.18.6",
     "@heroicons/react": "^2.2.0",
     "@tailwindcss/typography": "^0.5.15",
     "@testing-library/jest-dom": "^5.17.0",
@@ -18,8 +19,8 @@
     "react-native-view-shot": "^4.0.2",
     "react-scripts": "5.0.1",
     "tailwindcss": "^3.4.15",
-    "web-vitals": "^2.1.4",
-    "@babel/plugin-proposal-private-property-in-object": "^7.18.6"
+    "usehooks-ts": "^3.1.0",
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
